[gd_scene load_steps=14 format=3 uid="uid://hdkbommrm45s"]

[ext_resource type="PackedScene" uid="uid://cxnvttaic4xwg" path="res://Scenes/player.tscn" id="1_1m5o8"]
[ext_resource type="Script" path="res://Scripts/Game.gd" id="1_wel6u"]
[ext_resource type="PackedScene" uid="uid://fqk355orw75n" path="res://Scenes/asteroid.tscn" id="3_4v140"]
[ext_resource type="PackedScene" uid="uid://bm0pq53hmrnyd" path="res://Scenes/hud.tscn" id="4_4losf"]
[ext_resource type="PackedScene" uid="uid://vd1652vncsen" path="res://Scenes/game_over.tscn" id="5_7pf1w"]
[ext_resource type="PackedScene" uid="uid://c4g8n0mneglxm" path="res://Scenes/player_spawn_area.tscn" id="6_ac3u3"]
[ext_resource type="PackedScene" uid="uid://d05cimdugq3b" path="res://Scenes/StartMenu.tscn" id="6_bc86q"]
[ext_resource type="AudioStream" uid="uid://cl1x7l52jvgfk" path="res://assets/Audio/laserSmall_001.ogg" id="7_q1y0p"]
[ext_resource type="AudioStream" uid="uid://cm2spkvknflqg" path="res://assets/Audio/impactMetal_003.ogg" id="8_3poyb"]
[ext_resource type="AudioStream" uid="uid://dxyq5qord7owe" path="res://assets/Audio/explosionCrunch_000.ogg" id="9_m4wre"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rkrwb"]
emission_shape = 3
emission_box_extents = Vector3(1, 360, 1)
particle_flag_disable_z = true
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = -20.0
initial_velocity_max = -20.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 3.0
scale_max = 3.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rw218"]
emission_shape = 3
emission_box_extents = Vector3(1, 360, 1)
particle_flag_disable_z = true
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = -10.0
initial_velocity_max = -10.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qdpfr"]
emission_shape = 3
emission_box_extents = Vector3(1, 360, 1)
particle_flag_disable_z = true
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = -30.0
initial_velocity_max = -30.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 5.0
scale_max = 5.0

[node name="Game" type="Node2D"]
position = Vector2(360, 180)
script = ExtResource("1_wel6u")

[node name="Player" parent="." instance=ExtResource("1_1m5o8")]
position = Vector2(360, 180)

[node name="Lasers" type="Node" parent="."]

[node name="Asteroids" type="Node" parent="."]

[node name="Asteroid" parent="Asteroids" instance=ExtResource("3_4v140")]
position = Vector2(360, 180)

[node name="Asteroid2" parent="Asteroids" instance=ExtResource("3_4v140")]
position = Vector2(295, 339)
size = 2

[node name="Asteroid3" parent="Asteroids" instance=ExtResource("3_4v140")]
position = Vector2(818, 60)
size = 0

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("4_4losf")]

[node name="GameOver" parent="UI" instance=ExtResource("5_7pf1w")]
visible = false
offset_left = 407.0
offset_top = 235.0
offset_right = 447.0
offset_bottom = 275.0

[node name="Start" parent="UI" instance=ExtResource("6_bc86q")]
visible = false

[node name="PlayerSpawnPosition" type="Node2D" parent="."]
position = Vector2(360, 180)

[node name="PlayerSpawnArea" parent="PlayerSpawnPosition" instance=ExtResource("6_ac3u3")]

[node name="LaserSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_q1y0p")

[node name="AsteroidHitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_3poyb")

[node name="PlayerDied" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_m4wre")

[node name="StarFields" type="Node" parent="."]

[node name="Middle" type="GPUParticles2D" parent="StarFields"]
z_index = -95
position = Vector2(1290, 384)
amount = 250
process_material = SubResource("ParticleProcessMaterial_rkrwb")
lifetime = 140.0
preprocess = 280.0

[node name="Back" type="GPUParticles2D" parent="StarFields"]
z_index = -100
position = Vector2(1323, 355)
amount = 1000
process_material = SubResource("ParticleProcessMaterial_rw218")
lifetime = 140.0
preprocess = 280.0

[node name="Front" type="GPUParticles2D" parent="StarFields"]
z_index = -90
position = Vector2(1315, 370)
amount = 30
process_material = SubResource("ParticleProcessMaterial_qdpfr")
lifetime = 140.0
preprocess = 280.0
